<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_device_id"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_device_id"/>
    <!--
         <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    -->
    <item
        android:id="@+id/action_alert"
        android:icon="@drawable/ic_alert"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_alert"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>