<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:orca="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/TableRow001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" >

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/SentrequestEditText"
                android:layout_width="match_parent"
                android:layout_height="42.0dip"
                android:background="@drawable/text_rect"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"                
                android:paddingLeft="9.0dip"
                android:paddingRight="9.0dip"
                android:singleLine="true"
                whatever:customRegexp="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$"
                whatever:emptyErrorString="@string/message_empty"
                whatever:testErrorString="@string/invalid_email_message"
                whatever:testType="regexp" />
        </TableRow>
    </LinearLayout>

</FrameLayout>